Mobile css changes, spacing, fixes to project cards

--- a/src/components/projectcard/projectcard.css
+++ b/src/components/projectcard/projectcard.css
@@ -10,7 +10,7 @@
     margin-right:auto;
     overflow:hidden;
     text-Decoration: none;
-    
+    padding-bottom:3vh;   
 }
 
 .projcard:hover{
